# DiceRobot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  autoloader.php  composer.json  config.php  custom_reply.php  custom_settings.php  customreply.php  deploy.sh  dicerobot.php  pyproject.toml  requirements.txt  routes.php  settings.php
.github/workflows/: ci.yml  php.yml  sync-to-gitee.yml  upload-to-s3.yml
DiceRobot/: App.php  Parser.php  Response.php  RouteCollector.php
DiceRobot/Base/: API.php  AbstractAction.php  CharacterCard.php  CheckDiceRule.php  CheckRule.php  Customization.php  DiceOperation.php  DiceSubexpression.php  RobotCommandAction.php  RobotSettings.php  Rolling.php
DiceRobot/Exception/: CharacterCardLostException.php  FileLostException.php  InformativeException.php  JSONDecodeException.php  OrderErrorException.php
Reference/: AboutTemplate.json  COCCharacterCardTemplate.json  COCCheckDiceRule.json  DNDCharacterCardTemplate.json  HelloTemplate.json  HelpTemplate.json
app/: __init__.py  auth.py  config.py  context.py  database.py  dependencies.py  dispatch.py  enum.py  exception_handlers.py  exceptions.py  globals.py  log.py  manage.py  models.py  responses.py  schedule.py  scheduler.py  task.py  tasks.py  utils.py  version.py
app/actuators/: __init__.py  app.py  napcat.py  qq.py
app/data/: __init__.py  rule.py
app/enum/: __init__.py  app.py  napcat.py
app/internal/: __init__.py  dispatcher.py  enum.py  event.py  message.py  parser.py  schedule.py  task.py  util.py
app/managers/: __init__.py  config.py  data.py  database.py  dispatch.py  network.py  task.py
app/models/: __init__.py  admin.py  config.py  event.py  message.py  task.py
app/network/: __init__.py  cloud.py  dicerobot.py  mirai.py  napcat.py
app/router/: __init__.py  admin.py  napcat.py  qq.py  webhook.py
app/routers/: __init__.py  admin.py  napcat.py  qq.py  webhook.py
config/: bootstrap.php  container.php  custom_replies.php  custom_settings.php  routes.php  settings.php
data/reference/: COCCharacterCardTemplate.json  HelpTemplate.json  NameTemplate.json
data/rule/: 1.json  coc7.json
default/: reply.php  settings.php  wording.php
plugin/: __init__.py
plugin/dicerobot/: __init__.py  bonus_penalty_dice.py  bot.py  chat.py  daily_60s.py  dall_e.py  dice.py  friend_request.py  group_invite.py  hidden_dice.py  skill_roll.py  stable_diffusion.py
plugins/: __init__.py
plugins/dicerobot/: __init__.py
reference/: COCCheckRule.json  HelpTemplate.json
src/: App.php  AppStatus.php  Server.php
src/Action/: EventAction.php  MessageAction.php  OrderRouterAction.php  RobotOrderAction.php
src/Data/: Config.php  CustomConfig.php  Deck.php  Dice.php  DiceRobotResponse.php  MiraiResponse.php  Resource.php  Response.php  Subexpression.php
src/DiceRobot/: Action.php  App.php  Parser.php  Response.php  RouteCollector.php
src/Enum/: AppStatusEnum.php  Enum.php  MessageTypeEnum.php
src/Exception/: DiceRobotException.php  MiraiApiException.php  OrderErrorException.php  RepeatOverstepException.php  (+3 more)
src/Util/: Jwt.php  (+6 more)
tests/: AppTest.php  TestCase.php  __init__.py  base.py  bootstrap.php  conftest.py  test_admin_router.py  test_api.py  test_app_actuator.py  test_auth.py  test_bot.py  test_bp_dice.py  test_chat.py  test_config_manager.py  test_conversation.py  test_dice.py  test_dispatch_manager.py  test_hidden_dice.py  test_napcat_actuator.py  test_napcat_router.py  test_order.py  test_qq_actuator.py  test_qq_router.py  test_skill_roll.py  test_webhook_router.py
(+406 files in other folders)
