[tool.poetry]
name = "dicerobot"
version = "4.0.0"
description = "A TRPG game assistant robot"
authors = ["Drsanwujiang <drsanwujiang@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dicerobot.tech/"
repository = "https://github.com/drsanwujiang/DiceRobot"
documentation = "https://docs.dicerobot.tech/"
include = [
    "LICENSE",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
loguru = "^0.7.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.7.0"
pyjwt = "^2.8.0"
httpx = "^0.27.0"
pillow = "^10.1.0"
apscheduler = "^3.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
