[project]
name = "dicerobot"
version = "4.7.0"
description = "A TRPG assistant bot"
authors = [
    { name = "Drsanwujiang", email = "drsanwujiang@gmail.com" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<1.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "loguru (>=0.7.0,<0.8.0)",
    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
    "aiosqlite (>=0.21.0,<1.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "apscheduler (==4.0.0a6)",
    "arrow (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.10.0,<3.0.0)",
    "werkzeug (>=3.1.0,<4.0.0)",
    "semver (>=3.0.0,<4.0.0)",
    "watchfiles (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "sse-starlette (>=3.0.0,<4.0.0)",
    "numexpr (>=2.11.0,<3.0.0)"
]

[project.urls]
homepage = "https://dicerobot.tech/"
repository = "https://github.com/drsanwujiang/DiceRobot"
documentation = "https://docs.dicerobot.tech/"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.1.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
